# go-cabal-parser

./: LICENSE  README.md  cabal.go  cabal_test.go  dependencies_parser.go  dependencies_parser_test.go  go.mod  iterator.go  parser.go  parser_test.go  tokenizer.go  tokenizer_test.go
test/testdata/: 1.cabal  5.cabal
testdata/: 2.cabal  3.cabal  4.cabal
