Name:          3d-graphics-examples
Version:       0.0.0.2
Cabal-Version: >= 1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     © 2006      Matthias Reisner;
               © 2012–2015 Wolfgang Jeltsch
Author:        Matthias Reisner
Maintainer:    wolfgang@cs.ioc.ee
Stability:     provisional
